Completed "Creating, Loading, and Selecting Data with Pandas" Section of Course

--- a/Data Science Foundations/Pandas/05 - Reading a CSV.ipynb
+++ b/Data Science Foundations/Pandas/05 - Reading a CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "9f0b86c8",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the CSV file\n",
-    "df = pd.read_csv('.\\_resources\\cupcakes.csv')\n",
+    "df = pd.read_csv('.\\_resources\\Pandas - Cupcakes.csv')\n",
     "\n",
     "# Display the DataFrame\n",
     "print(df)"
